FC-105 - [fortress-core] - 'static' modifier out of order with the JLS suggestions