@@ -54,157 +54,157 @@ public class GlobalIds
     /**
      * When this optional tag, {@code accessmgr.implementation}, is placed in Fortress properties, its class name will be the default {@link AccessMgr} instance used.
      */
-    public final static String ACCESS_IMPLEMENTATION = "accessmgr.implementation";
+    public static final String ACCESS_IMPLEMENTATION = "accessmgr.implementation";
 
     /**
      * When this optional tag, {@code adminImplementation}, is placed in Fortress properties, its class name will be the default {@link AdminMgr} instance used.
      */
-    public final static String ADMIN_IMPLEMENTATION = "adminmgr.implementation";
+    public static final String ADMIN_IMPLEMENTATION = "adminmgr.implementation";
 
     /**
      * When this optional tag, {@code daoConnector}, is placed in Fortress properties,
      */
-    public final static String DAO_CONNECTOR = "dao.connector";
+    public static final String DAO_CONNECTOR = "dao.connector";
 
     /**
      * When this optional tag, {@code reviewImplementation}, is placed in Fortress properties, its class name will be the default {@link ReviewMgr} instance used.
      */
-    public final static String REVIEW_IMPLEMENTATION = "reviewmgr.implementation";
+    public static final String REVIEW_IMPLEMENTATION = "reviewmgr.implementation";
 
     /**
      * When this optional tag, {@code policyImplementation}, is placed in Fortress properties, its class name will be the default {@link PwPolicyMgr} instance used.
      */
-    public final static String PSWD_POLICY_IMPLEMENTATION = "policymgr.implementation";
+    public static final String PSWD_POLICY_IMPLEMENTATION = "policymgr.implementation";
 
     /**
      * When this optional tag, {@code auditmgr.implementation}, is placed in Fortress properties, its class name will be the default {@link AuditMgr} instance used.
      */
-    public final static String AUDIT_IMPLEMENTATION = "auditmgr.implementation";
+    public static final String AUDIT_IMPLEMENTATION = "auditmgr.implementation";
 
     /**
      * When this optional tag, {@code delegatedAdminImplementation}, is placed in Fortress properties, its class name will be the default {@link DelAdminMgr} instance used.
      */
-    public final static String DELEGATED_ADMIN_IMPLEMENTATION = "delegated.adminmgr.implementation";
+    public static final String DELEGATED_ADMIN_IMPLEMENTATION = "delegated.adminmgr.implementation";
 
     /**
      * When this optional tag, {@code delegatedReviewImplementation}, is placed in Fortress properties, its class name will be the default {@link DelReviewMgr} instance used.
      */
-    public final static String DELEGATED_REVIEW_IMPLEMENTATION = "delegated.reviewmgr.implementation";
+    public static final String DELEGATED_REVIEW_IMPLEMENTATION = "delegated.reviewmgr.implementation";
 
     /**
      * When this optional tag, {@code delegatedAccessImplementation}, is placed in Fortress properties, its class name will be the default {@link DelAccessMgr} instance used.
      */
-    public final static String DELEGATED_ACCESS_IMPLEMENTATION = "delegated.accessmgr.implementation";
+    public static final String DELEGATED_ACCESS_IMPLEMENTATION = "delegated.accessmgr.implementation";
 
     /**
      * When this optional tag, {@code configImplementation}, is placed in Fortress properties, its class name will be the default {link ConfigMgr} instance used.
      */
-    public final static String CONFIG_IMPLEMENTATION = "configmgr.implementation";
+    public static final String CONFIG_IMPLEMENTATION = "configmgr.implementation";
 
     /**
      * When this optional tag, {@code accelsmgr.implementation}, is placed in Fortress properties, its class name will be the default {@link AccelMgr} instance used.
      */
-    public final static String ACCEL_IMPLEMENTATION = "accelmgr.implementation";
+    public static final String ACCEL_IMPLEMENTATION = "accelmgr.implementation";
 
     /**
      * When this optional tag, {@code groupImplementation}, is placed in Fortress properties, its class name will be the default {link GroupMgr} instance used.
      */
-    public final static String GROUP_IMPLEMENTATION = "groupmgr.implementation";
+    public static final String GROUP_IMPLEMENTATION = "groupmgr.implementation";
 
     //	AUTHENTICATION_TYPE
     /**
      * This property is used to specify if authentication is being performed within a security realm.
      */
-    public final static String AUTHENTICATION_TYPE = "authn.type";
+    public static final String AUTHENTICATION_TYPE = "authn.type";
 
     /**
      * Specifies realm authentication mode.
      */
-    public final static String REALM_TYPE = "REALM";
+    public static final String REALM_TYPE = "REALM";
 
     /**
      * Used to declare validation modules that are used to process constraint checks during session activation.
      */
-    public final static String VALIDATOR_PROPS = "temporal.validator.";
+    public static final String VALIDATOR_PROPS = "temporal.validator.";
 
     /**
      * The DSD validator performs Dynamic Separation of Duty checks during role activation.
      */
-    public final static String DSD_VALIDATOR_PROP = "temporal.validator.dsd";
+    public static final String DSD_VALIDATOR_PROP = "temporal.validator.dsd";
 
     /**
      * This constant is used during authentication to determine if runtime is security realm.  If IS_REALM == true,
      * the authentication module will not throw SecurityException on password resets.  This is to enable the authentication
      * event to succeed allowing the application to prompt user to change their password.
      */
-    public final static boolean IS_REALM = GlobalIds.REALM_TYPE.equalsIgnoreCase( Config
+    public static final boolean IS_REALM = GlobalIds.REALM_TYPE.equalsIgnoreCase( Config
         .getProperty( GlobalIds.AUTHENTICATION_TYPE ) );
 
     /**
      * Parameter specifies the distinguished name (dn) of the LDAP suffix.  The is the root or top-most node for a Directory Information Tree (DIT).  The typical
      * Fortress suffix format is {@code dc=example,dc=com}.
      */
-    public final static String SUFFIX = "suffix";
+    public static final String SUFFIX = "suffix";
 
     /**
      * Specifies the dn of the container where the Fortress User data set is located within DIT.  This is typically in the format of
      * {@code ou=People, dc=example, dc=com}
      */
-    public final static String USER_ROOT = "user.root";
+    public static final String USER_ROOT = "user.root";
 
     /**
      * Specifies the dn of the container where the Fortress Permissions are located.  This is typically in the format of
      * {@code ou=Permissions,ou=RBAC,dc=example,dc=com}
      */
-    public final static String PERM_ROOT = "perm.root";
+    public static final String PERM_ROOT = "perm.root";
 
     /**
      * Specifies the dn of the container where the Fortress RBAC Roles are located.  This is typically in the format of
      * {@code ou=Roles,ou=RBAC,dc=example,dc=com}
      */
-    public final static String ROLE_ROOT = "role.root";
+    public static final String ROLE_ROOT = "role.root";
 
     /**
      * Specifies the dn of the container where the Fortress Password Polices are located.  This is typically in the format of
      * {@code ou=Policies,dc=example,dc=com}
      */
-    public final static String PPOLICY_ROOT = "pwpolicy.root";
+    public static final String PPOLICY_ROOT = "pwpolicy.root";
 
     /**
      * Specifies the dn of the container where the Fortress SSD and DSD constraints are located.  This is typically in the format of
      * {@code ou=Constraints,ou=RBAC,dc=example,dc=com}
      */
-    public final static String SD_ROOT = "sdconstraint.root";
+    public static final String SD_ROOT = "sdconstraint.root";
 
     /**
      * Specifies the dn of the container where the Fortress User OU pools are located.  This is typically in the format of
      * {@code ou=OS-U,ou=ARBAC,dc=example,dc=com}
      */
-    public final static String OSU_ROOT = "userou.root";
+    public static final String OSU_ROOT = "userou.root";
 
     /**
      * Specifies the dn of the container where the Fortress Permission OU pools are located.  This is typically in the format of
      * {@code ou=OS-P,ou=ARBAC,dc=example,dc=com}
      */
-    public final static String PSU_ROOT = "permou.root";
+    public static final String PSU_ROOT = "permou.root";
 
     /**
      * Specifies the dn of the container where the Fortress Administrative Roles are located.  This is typically in the format of
      * {@code ou=AdminRoles,ou=ARBAC,dc=example,dc=com}
      */
-    public final static String ADMIN_ROLE_ROOT = "adminrole.root";
+    public static final String ADMIN_ROLE_ROOT = "adminrole.root";
 
     /**
      * Specifies the dn of the container where the Fortress Administrative Permissions are located.  This is typically in the format of
      * {@code ou=AdminPerms,ou=ARBAC,dc=example,dc=com}
      */
-    public final static String ADMIN_PERM_ROOT = "adminperm.root";
+    public static final String ADMIN_PERM_ROOT = "adminperm.root";
 
     /**
      * Specifies the dn of the container where the Groups are located.  This is typically in the format of
      * {@code ou=Groups,dc=example,dc=com}
      */
-    public final static String GROUP_ROOT = "group.root";
+    public static final String GROUP_ROOT = "group.root";
 
     /*
       *  *************************************************************************
@@ -215,7 +215,7 @@ public class GlobalIds
     /**
      * Password policy object class structure uses cn attribute name.
      */
-    public final static String POLICY_NODE_TYPE = SchemaConstants.CN_AT;
+    public static final String POLICY_NODE_TYPE = SchemaConstants.CN_AT;
 
     /*
     *  *************************************************************************
@@ -233,40 +233,40 @@ public class GlobalIds
       *  ************************************************************************
       */
 
-    public final static int AUTHZ_COMPARE_FAILURE_FLAG = 5;
+    public static final int AUTHZ_COMPARE_FAILURE_FLAG = 5;
     /**
      * This string will be appended to the operation name to force failure on compare.
      */
-    public final static String FAILED_AUTHZ_INDICATOR = "%failed%";
+    public static final String FAILED_AUTHZ_INDICATOR = "%failed%";
     /**
      * This object class contains Fortress audit contextual information.
      */
-    public final static String FT_MODIFIER_AUX_OBJECT_CLASS_NAME = "ftMods";
+    public static final String FT_MODIFIER_AUX_OBJECT_CLASS_NAME = "ftMods";
 
     /**
      * The ftModifier contains the internalUserId of administrator who performed action.
      */
-    public final static String FT_MODIFIER = "ftModifier";
+    public static final String FT_MODIFIER = "ftModifier";
 
     /**
      * The {@code ftModCode} attribute contains the permission object name and operation of admin function performed.
      */
-    public final static String FT_MODIFIER_CODE = "ftModCode";
+    public static final String FT_MODIFIER_CODE = "ftModCode";
 
     /**
      * The {@code ftModId} contains a globally unique id that is bound to the audit event entity.
      */
-    public final static String FT_MODIFIER_ID = "ftModId";
+    public static final String FT_MODIFIER_ID = "ftModId";
 
     /**
      * The {@code ftId} contains a globally unique id that is bound to the application entity.
      */
-    public final static String FT_IID = "ftId";
+    public static final String FT_IID = "ftId";
 
     /**
      * This string literal contains a common start for most ldap search filters that fortress uses.
      */
-    public final static String FILTER_PREFIX = "(&(" + SchemaConstants.OBJECT_CLASS_AT + "=";
+    public static final String FILTER_PREFIX = "(&(" + SchemaConstants.OBJECT_CLASS_AT + "=";
 
     /*
       *  *************************************************************************
@@ -277,12 +277,12 @@ public class GlobalIds
      * The {@code ftProperties} object class contains name-value pairs that are neither validated nor constrained.
      * Properties are application defined parameters and clients may store any reasonable values.
      */
-    public final static String PROPS_AUX_OBJECT_CLASS_NAME = "ftProperties";
+    public static final String PROPS_AUX_OBJECT_CLASS_NAME = "ftProperties";
 
     /**
      * The {@code ftProps} attribute contains a single name-value pairs that is {@code :} separated.
      */
-    public final static String PROPS = "ftProps";
+    public static final String PROPS = "ftProps";
 
     /*
       *  *************************************************************************
@@ -293,12 +293,12 @@ public class GlobalIds
     /**
      * The object class is used to store Fortress Role entity data.
      */
-    public final static String ROLE_OBJECT_CLASS_NM = "ftRls";
+    public static final String ROLE_OBJECT_CLASS_NM = "ftRls";
 
     /**
      * Defines the object class structure used within Fortress Role processing.
      */
-    public final static String ROLE_OBJ_CLASS[] =
+    public static final String ROLE_OBJ_CLASS[] =
         {
             SchemaConstants.TOP_OC,
             ROLE_OBJECT_CLASS_NM,
@@ -319,34 +319,34 @@ public class GlobalIds
     /**
      * This single occurring attribute is used to store constraint policies on Fortress User objects.
      */
-    public final static String CONSTRAINT = "ftCstr";
+    public static final String CONSTRAINT = "ftCstr";
 
     // USER Role Definitions:
 
     /**
      * Multi-occurring attribute contains RBAC Role assignments for Users.
      */
-    public final static String USER_ROLE_ASSIGN = "ftRA";
+    public static final String USER_ROLE_ASSIGN = "ftRA";
 
     /**
      * Multi-occurring attribute contains constraint policies for RBAC Role assignments for Users.
      */
-    public final static String USER_ROLE_DATA = "ftRC";
+    public static final String USER_ROLE_DATA = "ftRC";
 
     /**
      * Multi-occurring attribute contains Administrative Role assignments for Users.
      */
-    public final static String USER_ADMINROLE_ASSIGN = "ftARA";
+    public static final String USER_ADMINROLE_ASSIGN = "ftARA";
 
     /**
      * Multi-occurring attribute contains constraint policies for Administrative Role assignments for Users.
      */
-    public final static String USER_ADMINROLE_DATA = "ftARC";
+    public static final String USER_ADMINROLE_DATA = "ftARC";
 
     /**
      * Attribute name for storing Fortress permission object names.
      */
-    public final static String POBJ_NAME = "ftObjNm";
+    public static final String POBJ_NAME = "ftObjNm";
 
     /**
      * Attribute name for storing Fortress permission object id.
@@ -356,7 +356,7 @@ public class GlobalIds
     /**
      * Attribute name for storing parent node names for hierarchical processing.
      */
-    public final static String PARENT_NODES = "ftParents";
+    public static final String PARENT_NODES = "ftParents";
 
     /*
     *  *************************************************************************
@@ -367,55 +367,55 @@ public class GlobalIds
     /**
      * Fortress userId cannot exceed length of 40.
      */
-    public final static int USERID_LEN = 40;
+    public static final int USERID_LEN = 40;
 
     /**
      * Fortress role names cannot exceed length of 40.
      */
-    public final static int ROLE_LEN = 40;
+    public static final int ROLE_LEN = 40;
 
     /**
      * Fortress description text cannot exceed length of 80.
      */
-    public final static int DESC_LEN = 180;
+    public static final int DESC_LEN = 180;
 
     /**
      * Fortress permission names cannot exceed length of 100.
      */
-    public final static int PERM_LEN = 100;
+    public static final int PERM_LEN = 100;
 
     /**
      * Fortress User passwords must have length of 50 or less..
      */
-    public final static int PASSWORD_LEN = 50;
+    public static final int PASSWORD_LEN = 50;
 
     /**
      * Fortress password policy names cannot exceed length of 40.
      */
-    public final static int PWPOLICY_NAME_LEN = 40;
+    public static final int PWPOLICY_NAME_LEN = 40;
 
     /**
      * Fortress ou's cannot exceed length of 40.
      */
-    public final static int OU_LEN = 40;
+    public static final int OU_LEN = 40;
 
     /**
      * Fortress User surname cannot exceed length of 80.
      */
-    public final static int SN_LEN = 80;
+    public static final int SN_LEN = 80;
 
     /**
      * Fortress common name attributes cannot exceed length of 80.
      */
-    public final static int CN_LEN = 80;
+    public static final int CN_LEN = 80;
 
     /**
      * Fortress properties cannot exceed length of 100.
      */
-    public final static int PROP_LEN = 100;
+    public static final int PROP_LEN = 100;
 
     // Regular Expression Patterns stored in Fortress config file:
-    public final static String REG_EX_SAFE_TEXT = "regXSafetext";
+    public static final String REG_EX_SAFE_TEXT = "regXSafetext";
 
     /*
       *  *************************************************************************
@@ -425,22 +425,22 @@ public class GlobalIds
     /**
      * Used to define characters that must be encoded before being processed by ldap operations.
      */
-    public final static String LDAP_FILTER = "ldap.filter.";
+    public static final String LDAP_FILTER = "ldap.filter.";
 
     /**
      * Used to define encoded replacements for characters to be filtered.
      */
-    public final static String LDAP_SUB = "ldap.sub.";
+    public static final String LDAP_SUB = "ldap.sub.";
 
     /**
      * Defines how many entries are to be stored in the encoding set.
      */
-    public final static String LDAP_FILTER_SIZE_PROP = "ldap.filter.size";
+    public static final String LDAP_FILTER_SIZE_PROP = "ldap.filter.size";
 
     /**
      * Used during ldap filter processing.
      */
-    public final static boolean LDAP_FILTER_SIZE_FOUND = ( Config
+    public static final boolean LDAP_FILTER_SIZE_FOUND = ( Config
         .getProperty( LDAP_FILTER_SIZE_PROP ) != null );
     public static final String APACHE_LDAP_API = "apache";
     public static final String AUTH_Z_FAILED = "authzfailed";
@@ -480,7 +480,7 @@ public class GlobalIds
             String lenProp = Config.getProperty( LDAP_FILTER_SIZE_PROP );
             if ( LDAP_FILTER_SIZE_FOUND )
             {
-                Integer len = new Integer( lenProp );
+                Integer len = Integer.valueOf( lenProp );
                 ldapFilterSize = len;
             }
         }
@@ -505,7 +505,7 @@ public class GlobalIds
      * Fortress stores name-value pairs within multi-occurring attributes in ldap.  Usually a separator of ':' is used
      * format: {@code name:value},
      */
-    public final static char PROP_SEP = ':';
+    public static final char PROP_SEP = ':';
 
     /**
      * Fortress stores complex attribute types within a single attribute in ldap.  Usually a delimiter of '$' is used for string tokenization.
